@@ -111,33 +111,7 @@
    "outputs": [],
    "source": [
     "# an Objective is made from a Model and a Data. Here we use a Transform to fit as logY vs X.\n",
-    "objective = Objective(model, data, transform=Transform('logY'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tqdm import tqdm\n",
-    "\n",
-    "class Callback():\n",
-    "    def __init__(self, maxiter):\n",
-    "        self.maxiter = maxiter\n",
-    "        self._bar = tqdm(total=self.maxiter)\n",
-    "        self._it = 0\n",
-    "\n",
-    "    def __call__(self, x):\n",
-    "        self._it += 1\n",
-    "        self._bar.update(1)\n",
-    "        self._bar.refresh()\n",
-    "\n",
-    "    def __enter__(self):\n",
-    "        return self\n",
-    "\n",
-    "    def __exit__(self, exc_type, exc_value, traceback):\n",
-    "        self._bar.close()\n"
+    "objective = Objective(model, data, transform=Transform('logY'))\n"
    ]
   },
   {
@@ -150,8 +124,7 @@
     "fitter = CurveFitter(objective)\n",
     "\n",
     "# do an initial fit with differential evolution\n",
-    "with Callback(200) as c:\n",
-    "    res = fitter.fit('L-BFGS-B', callback=c)"
+    "res = fitter.fit('differential_evolution')"
    ]
   },
   {
@@ -283,6 +256,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.1"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
